--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,4 +35,5 @@ android {
 
 dependencies {
     implementation 'com.stripe:stripe-android:8.2.0'
+    implementation 'com.google.android.gms:play-services-wallet:16.0.1'
 }
