--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
 .DS_Store
 .dart_tool/
 
-.atom/
-.idea
-.pub/
 .packages
 .pub/
-packages
+pubspec.lock
 
 build/
-ios/.generated/
-ios/Flutter/Generated.xcconfig
-ios/Runner/GeneratedPluginRegistrant.*
-
-
-
