--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ build/
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 android/app/src/main/assets/crashlytics-build.properties
 android/app/src/main/res/values/com_crashlytics_export_strings.xml
+example/.flutter-plugins-dependencies
+example/ios/Flutter/flutter_export_environment.sh
