--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:4.1.3'
     }
 }
 
@@ -35,5 +35,6 @@ android {
 
 dependencies {
     implementation 'com.stripe:stripe-android:14.5.0'
-    implementation 'com.google.android.gms:play-services-wallet:18.0.0'
+//    implementation 'com.stripe:stripe-android:16.4.3' // minsdk = 21 (currently 19), loses ~%1 of new paying users
+    implementation 'com.google.android.gms:play-services-wallet:18.1.2'
 }
